--- a/backend/package.json
+++ b/backend/package.json
@@ -10,17 +10,21 @@
   "author": "Ayoub Ait Bahllou",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.2",
-    "slugify": "^1.3.5",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.17.0"
+    "path": "^0.12.7",
+    "sequelize": "^6.17.0",
+    "slugify": "^1.3.5"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
