--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Ayoub Ait Bahllou",
   "license": "MIT",
